<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.5">
  <POU Name="FB_SceneController" Id="{130ce1fb-8efb-4aa7-9bf7-6373c671b6e1}" SpecialFunc="None">
    <Declaration><![CDATA[(*
Funion block manages the scene data. When rising edge on bSceneON is detected
it recalls a scene from the memory. If rising edge is detected on bSaveScene
it saves the scene to memory under bySceneID number.
Futhermore it save the information about individual lamps being cut off from the scene.
Main idea is that FB uses GVL_IO.arrStreetLamps as 'live buffer' ,
GVL_IO.arrScenes<  > on the other hand is a data 'memory buffer'. 
*)
FUNCTION_BLOCK FB_SceneController
VAR_INPUT
END_VAR
VAR_OUTPUT
	bBusy				:BOOL:=FALSE;		//when TRUE FB is busy working
END_VAR
VAR
	bySceneID			: BYTE;		//number of scene that is being manipulated
	iSelector			: INT := 0;	//variable used in CASE statement
	iCounter			: INT := 0;	//for loop counter
	
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//if FB is not busy
IF NOT bBusy THEN
	//read BACnet object
	iSelector := REAL_TO_INT(fbBACnet_AV_SL_Scene.fPresentValue);
END_IF

CASE iSelector OF
	0, 255:	//idle state
		;
		
	1..127:	//SceneON
		bBusy := TRUE;	//set a flag indicating that this FB is busy
		
		//reset manual mode
		bBACnet_ResetManual := TRUE;
		
		//convert int to byte
		bySceneID := INT_TO_BYTE(iSelector);
		
		//rewrite power levels from memory buffer to BACnet objects
		GVL_IO.arrStreetLamps[1].nLevel  := GVL_IO.arrScenesStreetLampsLevels[bySceneID, 1];
		GVL_IO.arrStreetLamps[2].nLevel  := GVL_IO.arrScenesStreetLampsLevels[bySceneID, 2];
		GVL_IO.arrStreetLamps[3].nLevel  := GVL_IO.arrScenesStreetLampsLevels[bySceneID, 3];
		GVL_IO.arrStreetLamps[4].nLevel  := GVL_IO.arrScenesStreetLampsLevels[bySceneID, 4];
		GVL_IO.arrStreetLamps[5].nLevel  := GVL_IO.arrScenesStreetLampsLevels[bySceneID, 5];
		GVL_IO.arrStreetLamps[6].nLevel  := GVL_IO.arrScenesStreetLampsLevels[bySceneID, 6];
		GVL_IO.arrStreetLamps[7].nLevel  := GVL_IO.arrScenesStreetLampsLevels[bySceneID, 7];
		GVL_IO.arrStreetLamps[8].nLevel  := GVL_IO.arrScenesStreetLampsLevels[bySceneID, 8];
		GVL_IO.arrStreetLamps[9].nLevel  := GVL_IO.arrScenesStreetLampsLevels[bySceneID, 9];
		GVL_IO.arrStreetLamps[10].nLevel := GVL_IO.arrScenesStreetLampsLevels[bySceneID, 10];
			
		iSelector := 0;		//after rewriting data go back to idle
		bBusy := FALSE;		//indicate that this FB is no longer busy
		
		
	128..254:	//SaveScene
		bBusy := TRUE;	//set a flag indicating that this FB is busy
		
		bySceneID := INT_TO_BYTE(iSelector) - 127;
		
		//iterate through arrays to
		FOR iCounter := 1 TO byStreetLampsCount BY 1 DO
			//save current lamp's power levels to memory buffer
			GVL_IO.arrScenesStreetLampsLevels[bySceneID, iCounter]
				:= GVL_IO.arrStreetLamps[iCounter].nLevel;
		END_FOR
		
		iSelector := 0;		//after saving data go back to idle
		bBusy := FALSE;		//indicate that this FB is no longer busy
		
END_CASE


]]></ST>
    </Implementation>
    <LineIds Name="FB_SceneController">
      <LineId Id="283" Count="0" />
      <LineId Id="281" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="108" Count="0" />
      <LineId Id="282" Count="0" />
      <LineId Id="180" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="53" Count="0" />
      <LineId Id="55" Count="0" />
      <LineId Id="135" Count="0" />
      <LineId Id="56" Count="0" />
      <LineId Id="76" Count="1" />
      <LineId Id="275" Count="1" />
      <LineId Id="279" Count="0" />
      <LineId Id="285" Count="0" />
      <LineId Id="284" Count="0" />
      <LineId Id="286" Count="0" />
      <LineId Id="60" Count="0" />
      <LineId Id="187" Count="8" />
      <LineId Id="184" Count="0" />
      <LineId Id="81" Count="0" />
      <LineId Id="144" Count="1" />
      <LineId Id="90" Count="0" />
      <LineId Id="134" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="109" Count="1" />
      <LineId Id="186" Count="0" />
      <LineId Id="112" Count="0" />
      <LineId Id="114" Count="0" />
      <LineId Id="122" Count="0" />
      <LineId Id="125" Count="0" />
      <LineId Id="118" Count="0" />
      <LineId Id="128" Count="0" />
      <LineId Id="123" Count="0" />
      <LineId Id="140" Count="2" />
      <LineId Id="278" Count="0" />
      <LineId Id="54" Count="0" />
      <LineId Id="43" Count="1" />
      <LineId Id="23" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>